# mifetch

./: Cargo.toml  LICENSE  README.md  ascii.txt
src/: main.rs
